src/test/ui/macros/macro_undefined.stderr
error: cannot find macro `k` in this scope
  --> $DIR/macro_undefined.rs:11:5
   |
LL | /     macro_rules! kl {
LL | |         () => ()
LL | |     }
   | |_____- similarly named macro `kl` defined here
...
LL |       k!();
   |       ^ If I were you, I would simply a macro with a similar name exists: `kl`

error: aborting due to previous error

